[gd_scene load_steps=6 format=3 uid="uid://drg84m4gd4tv3"]

[ext_resource type="Script" path="res://systems/shop/shop_item.gd" id="1_mj7vh"]
[ext_resource type="Texture2D" uid="uid://bfja06n5b8g04" path="res://items/icons/stopwatch.png" id="2_qcp7r"]
[ext_resource type="Texture2D" uid="uid://baj0go04hwiyg" path="res://systems/shop/pricetag.png" id="3_rwyoo"]
[ext_resource type="Texture2D" uid="uid://f4qnkvqk2e7a" path="res://items/misc/quality_1.png" id="4_eramm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vl6vj"]
radius = 38.0526

[node name="Shop_Item" type="Node2D" groups=["item"]]
script = ExtResource("1_mj7vh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qcp7r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vl6vj")

[node name="Pricetag" type="Sprite2D" parent="."]
position = Vector2(50, -2)
texture = ExtResource("3_rwyoo")

[node name="price" type="Label" parent="."]
offset_left = 46.0
offset_top = -21.0
offset_right = 86.0
offset_bottom = 5.0
rotation = -0.090248
theme_override_colors/font_color = Color(0, 0.466667, 0, 1)
theme_override_font_sizes/font_size = 18
text = "50"

[node name="Quality_sprite" type="Sprite2D" parent="."]
visible = false
z_index = 100
position = Vector2(44, -48)
texture = ExtResource("4_eramm")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
